manifest/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-prod-service
  namespace: k8s-prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: k8s-prod
